<resources>
    <string name="app_name">Zurvives Companion</string>

    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>


    <string name="action_settings">Paramètres</string>

    <string name="pref_title_category_debug">Debug</string>
    <string name="pref_title_debug">Choix</string>
    <string name="pref_summary_debug">Pour</string>
    <string name="switch_off">Non</string>
    <string name="switch_on">Oui</string>

    <string name="pref_title_debug_edittext">Adresse IP</string>
    <string name="fragment_register_title">Créer un nouveau compte</string>

    <string name="fragment_register_edittext_name">Nom</string>
    <string name="fragment_register_edittext_nickname">Surnom</string>
    <string name="fragment_register_edittext_email">Email</string>
    <string name="fragment_register_edittext_password">Mot de passe</string>
    <string name="fragment_register_edittext_password_confirmation">Confirmation mot de passe</string>
    <string name="fragment_register_button_new_account">Créer un nouveau compte</string>
    <string name="fragment_register_edittext_already_has_accountt">Déjà compte! Connectez-vous</string>

    <string name="fragment_sign_in_title">Connexion</string>
    <string name="fragment_sign_in_edittext_email">Email</string>
    <string name="fragment_sign_in_edittext_password">Mot de passe</string>
    <string name="fragment_sign_in_button_login">Connexion</string>
    <string name="fragment_sign_in_rememberme">Se souvenir de moi</string>
    <string name="fragment_sign_in_edittext_create_accountt">Créer un compte</string>



    <string name="fragment_profile_title">Profil</string>
    <string name="fragment_characters_title">Mes personnages</string>
    <string name="fragment_equipments_title">Les équipements</string>



    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_confirmation">Souhaitez-vous réellement quitter l\'application ?</string>
    <string name="dialog_accept_button">Oui</string>
    <string name="dialog_cancel_button">Non</string>
    
    
    
    <string name="fragment_profile_welcome_message">Bonjour, %1$s</string>


</resources>
