<?xml version="1.0" encoding="utf-8"?>
<com.gc.materialdesign.views.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip">


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/fragment_sign_in_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/fragment_sign_in_floating"
                app:met_underlineColor="@color/fragment_sign_in_underline"
                android:hint="@string/fragment_sign_in_edittext_email"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/fragment_sign_in_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelTextColor="@color/fragment_sign_in_floating"
                app:met_underlineColor="@color/fragment_sign_in_underline"
                app:met_minCharacters="8"
                android:inputType="textPassword"
                android:hint="@string/fragment_sign_in_edittext_password"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <com.gc.materialdesign.views.CheckBox
                    android:id="@+id/fragment_sign_in_checkbox_rememberme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/fragment_sign_in_checkbox_rememberme"
                    materialdesign:check="true"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/fragment_sign_in_rememberme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_sign_in_rememberme"
                    android:textSize="20dip"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/fragment_sign_in_button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/background_btn"
                android:text="@string/fragment_sign_in_button_login"/>

            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:text="@string/fragment_sign_in_edittext_create_accountt"
                android:gravity="center"
                android:textSize="20dip"/>

        </LinearLayout>
    </RelativeLayout>
</com.gc.materialdesign.views.ScrollView>